--- a/CheckpointGroup041-Wi23.ipynb
+++ b/CheckpointGroup041-Wi23.ipynb
@@ -231,13 +231,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #1: Everyone must show up to the agreed meeting time.\n",
-    "- #2: If one cannot meet in person, a Zoom meeting may be arranged to accommodate.\n",
-    "- #3: If one cannot meet at all, they must notify the group beforehand and ensure they are fully caught up on the progress that was discussed during the meeting, as well as provide any insight and assistance to project issues that were mentioned.\n",
-    "- #4: Check/use the group's Discord server regularly to maintain that you and the rest of the group are fully caught up on the project's timeline.\n",
-    "- #5: If one wants to suggest a change to a specific idea or someone else's code, message the other person/group first for approval.\n",
-    "- #6: Although everyone has their own preferences and expertise, it is important to divide the work evenly.\n",
-    "- #7: Schedules, goals, and deadlines will be created collectively in either the Discord server or during meetings to ensure everyone's personal schedule is accounted for."
+    "- Everyone must show up to the agreed meeting time.\n",
+    "- If one cannot meet in person, a Zoom meeting may be arranged to accommodate.\n",
+    "- If one cannot meet at all, they must notify the group beforehand and ensure they are fully caught up on the progress that was discussed during the meeting, as well as provide any insight and assistance to project issues that were mentioned.\n",
+    "- Check/use the group's Discord server regularly to maintain that you and the rest of the group are fully caught up on the project's timeline.\n",
+    "- If one wants to suggest a change to a specific idea or someone else's code, message the other person/group first for approval.\n",
+    "- Although everyone has their own preferences and expertise, it is important to divide the work evenly.\n",
+    "- Schedules, goals, and deadlines will be created collectively in either the Discord server or during meetings to ensure everyone's personal schedule is accounted for."
    ]
   },
   {
